# di3p

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  todo.md
report/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib  reportSty.sty
report/chapters/: introduction.tex  lit_review.tex  methodology.tex  results.tex
report/front/: AckAndWork.tex  abstract.tex  cover.tex
src/: correction.cpp  correction.hpp  dft.cpp  dft.hpp  kmeans.cpp  kmeans.hpp  main.cpp  metrics.cpp  metrics.hpp
